--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,7 +17,7 @@ type: post
 
 {% comment %} build article {% endcomment %}
 <section>
-    {{ postData.title }}
+    <h1>{{ postData.title }}</h1>
 </section>
 
 <article>
