--- a/_includes/shortPost.html
+++ b/_includes/shortPost.html
@@ -9,6 +9,9 @@
 {% endif %}
 
 
+{% comment %} remove possible <p> tag from content {% endcomment %}
+
+
 {% comment %} build article {% endcomment %}
 <article>
 	<h1><a class="headline" href="{{ post.url }}">{{ post.title }}</a></h1>
@@ -16,5 +19,5 @@
         <span class="symbol">&#xf307;</span><span class="date">{{ post.date | date: postData['strings'].dateFormat }}</span><br/>
         <span class="symbol">&#xf302;</span><span class="left">{{ tagList | remove_first: ', ' }}</span>
     </p>
-    {{ post.content | truncatewords: 50 }}&nbsp;<a class="readMore floatRight" href="{{ post.url }}">{{ postData['strings'].readEntireArticle }}</a>    
+    {{ post.excerpt }}&nbsp;<a class="readMore floatRight" href="{{ post.url }}">{{ postData['strings'].readEntireArticle }}</a>
 </article>  
