--- a/_layouts/staticPage.html
+++ b/_layouts/staticPage.html
@@ -5,7 +5,7 @@ layout: default
 {% include language.html %}
 
 <section>
-	{{ page.title }}
+	<h1>{{ page.title }}</h1>
 </section>
 
 {{ page.content }}
