--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,7 @@ blockquote, q {
 blockquote:before, blockquote:after, q:before, q:after {
   content: none; }
 
-a, a.headline, a.navigation {
+a {
   margin: 0;
   padding: 0;
   font-size: 100%;
@@ -105,7 +105,10 @@ input, select {
       -webkit-transition: background-color 1s;
       transition: background-color 1s; }
       #archiveMenu #archiveMenuTrigger:checked ~ #archiveMenuEntries li:hover {
-        background-color: #6c97c1; }
+        background-color: #cccccc; }
+      #archiveMenu #archiveMenuTrigger:checked ~ #archiveMenuEntries li a {
+        display: block;
+        text-decoration: none; }
   #archiveMenu input {
     display: none; }
   #archiveMenu label {
@@ -123,49 +126,40 @@ input, select {
 /*
 	link formatting
 */
-a, a.headline, a.navigation {
-  color: #6c97c1;
+a {
+  color: lightslategrey;
   font-weight: bold;
-  text-decoration: none;
-  -ms-transition: color 1s;
-  -moz-transition: color 1s;
-  -o-transition: color 1s;
-  -webkit-transition: color 1s;
-  transition: color 1s; }
+  text-decoration: none; }
   a:hover {
-    color: #bbccdd; }
+    text-decoration: underline; }
 
 a.archive {
   color: black;
   font-weight: normal; }
 
 a.box, a.readMore {
-  background-color: #6c97c1;
+  background-color: lightslategrey;
   color: white;
   display: inline-block;
   margin: 0em 0.25em 0.25em 0em;
   padding: 0.25em 0.75em;
+  text-decoration: none;
   -ms-transition: background-color 1s;
   -moz-transition: background-color 1s;
   -o-transition: background-color 1s;
   -webkit-transition: background-color 1s;
   transition: background-color 1s; }
   a.box:hover, a.readMore:hover {
-    background-color: #bbccdd; }
+    background-color: #cccccc; }
 
 a.headline {
   color: black; }
-  a.headline:hover {
-    color: #bbccdd; }
 
 a.navigation {
   color: white; }
-  a.navigation:hover {
-    color: #bbccdd; }
 
 a.readMore {
-  margin-right: 0em;
-  margin-top: 0.5em; }
+  margin-right: 0em; }
 
 a[href^="http://"]:after {
   content: "\f442";
@@ -188,8 +182,8 @@ article:after {
   display: block; }
 
 code {
-  background-color: #dddddd;
-  border: 1px solid #aaaaaa;
+  background-color: #cccccc;
+  border: 1px solid gray;
   display: inline;
   padding: 0em 0.25em; }
   code.hasJax {
@@ -230,6 +224,10 @@ p {
 p:last-child {
   margin-bottom: 0em; }
 
+section h1 {
+  display: inline;
+  font-size: 1em; }
+
 table {
   border-collapse: collapse;
   border-spacing: 0em;
@@ -241,9 +239,9 @@ table {
   table th {
     font-weight: bold; }
   table tr:nth-child(even) {
-    background-color: #dddddd; }
+    background-color: #cccccc; }
   table tr:nth-child(odd) {
-    background-color: #aaaaaa; }
+    background-color: gray; }
 
 ul {
   margin-left: 1.5em;
@@ -401,7 +399,7 @@ aside {
     max-width: 15em; }
 
 footer, header {
-  background-color: #777777;
+  background-color: #404040;
   color: white;
   display: block;
   line-height: 4.5em;
