--- a/css/main.css
+++ b/css/main.css
@@ -85,7 +85,7 @@ input, select {
   #archiveMenu #archiveMenuTrigger:checked + label:after {
     content: "\f432"; }
   #archiveMenu #archiveMenuTrigger:checked ~ #archiveMenuEntries {
-    background-color: white;
+    background-color: #f3f3f3;
     border: 1px solid black;
     display: block;
     list-style: none;
@@ -134,12 +134,12 @@ a {
     text-decoration: underline; }
 
 a.archive {
-  color: black;
+  color: #0c0c0c;
   font-weight: normal; }
 
 a.box, a.readMore {
   background-color: lightslategrey;
-  color: white;
+  color: #f3f3f3;
   display: inline-block;
   margin: 0em 0.25em 0.25em 0em;
   padding: 0.25em 0.75em;
@@ -153,10 +153,10 @@ a.box, a.readMore {
     background-color: #cccccc; }
 
 a.headline {
-  color: black; }
+  color: #0c0c0c; }
 
 a.navigation {
-  color: white; }
+  color: #f3f3f3; }
 
 a.readMore {
   margin-right: 0em; }
@@ -173,7 +173,7 @@ address {
   font-style: normal; }
 
 article.topBorder {
-  border-top: 1px solid black;
+  border-top: 1px solid #0c0c0c;
   padding-top: 1.5em; }
 
 article:after {
@@ -234,7 +234,7 @@ table {
   margin: 2em auto 2em;
   text-align: center; }
   table td, table th {
-    border: 0.125em solid white;
+    border: 0.125em solid #f3f3f3;
     padding: 0.5em; }
   table th {
     font-weight: bold; }
@@ -253,7 +253,7 @@ ul.noBullet {
   margin-left: 0em; }
 
 .aperture {
-  border: 1px solid black;
+  border: 1px solid #0c0c0c;
   -ms-border-radius: 50%;
   -moz-border-radius: 50%;
   -o-border-radius: 50%;
@@ -353,8 +353,8 @@ body, html {
   height: 100%; }
 
 body {
-  background-color: white;
-  color: black;
+  background-color: #f3f3f3;
+  color: #0c0c0c;
   display: block;
   font-size: 1em;
   overflow-y: scroll;
@@ -377,13 +377,13 @@ body {
   display: table-row; }
 
 #contentTableRow > div:nth-child(2) {
-  border-right: 1px solid black; }
+  border-right: 1px solid #0c0c0c; }
 
 #wrapper {
   min-height: 100%; }
 
 article {
-  background-color: white;
+  background-color: #f3f3f3;
   margin-bottom: 1em;
   padding: 1em; }
   article:last-child {
@@ -400,7 +400,7 @@ aside {
 
 footer, header {
   background-color: #404040;
-  color: white;
+  color: #f3f3f3;
   display: block;
   line-height: 4.5em;
   margin-top: -4.5em; }
@@ -431,7 +431,7 @@ main {
   vertical-align: top; }
 
 section {
-  background-color: white;
+  background-color: #f3f3f3;
   font-size: 1.5em;
   font-weight: bold;
   margin-bottom: 0.66667em;
@@ -487,7 +487,7 @@ section {
     display: none; }
 
   #menuTrigger:checked + div {
-    border-bottom: 1px solid white; }
+    border-bottom: 1px solid #f3f3f3; }
     #menuTrigger:checked + div #menu {
       display: block;
       line-height: 1.5em;
