work in new article

--- a/css/_classes.scss
+++ b/css/_classes.scss
@@ -24,6 +24,10 @@
 	float: right;	
 }
 
+.footnotes {
+	margin-left: $lineHeight;
+}
+
 .large { font-size: 1.5em !important; }
 
 .left { text-align: left; }
