base font now PT Serif, new article ready

--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -48,5 +48,6 @@ $widthContentMin: 1200px;
 	other variables
 */
 
-$fontName: "Inconsolata";
+$fontName: "PT Serif";
+$fontMonospaceName: "Inconsolata";
 $fontIconName: "Genericons";
