--- a/css/_font.scss
+++ b/css/_font.scss
@@ -2,7 +2,8 @@
 	webfonts
 */
 
-@import url(http://fonts.googleapis.com/css?family=EB+Garamond);
+@import url(http://fonts.googleapis.com/css?family=Inconsolata:400,700);
+@import url(http://fonts.googleapis.com/css?family=PT+Serif:400,700);
 
 
 /*
@@ -18,30 +19,5 @@
          url('../media/font/genericons-regular-webfont.ttf') format('truetype'),
          url('../media/font/genericons-regular-webfont.svg#genericonsregular') format('svg');
     font-weight: normal;
-    font-style: normal;
-}
-
-
-/* Inconsolata regular */
-@font-face {
-    font-family: "Inconsolata";
-    src: url("../media/font/inconsolata-regular.eot");
-    src: url("../media/font/inconsolata-regular.eot?#iefix") format('embedded-opentype'),
-         url("../media/font/inconsolata-regular.woff") format('woff'),
-         url("../media/font/inconsolata-regular.ttf") format('truetype'),
-         url("../media/font/inconsolata-regular.svg#inconsolataregular") format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
-
-/* Inconsolata bold */
-@font-face {
-    font-family: "Inconsolata";
-    src: url("../media/font/inconsolata-bold.eot");
-    src: url("../media/font/inconsolata-bold.eot?#iefix") format('embedded-opentype'),
-         url("../media/font/inconsolata-bold.woff") format('woff'),
-         url("../media/font/inconsolata-bold.ttf") format('truetype'),
-         url("../media/font/inconsolata-bold.svg#inconsolatabold") format('svg');
-    font-weight: bold;
     font-style: normal;
 }
