--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
-@import url(http://fonts.googleapis.com/css?family=EB+Garamond);
+@import url(http://fonts.googleapis.com/css?family=Inconsolata:400,700);
+@import url(http://fonts.googleapis.com/css?family=PT+Serif:400,700);
 /* 
 	html5doctor.com Reset v1.6.1 (http://html5doctor.com/html-5-reset-stylesheet/) - http://cssreset.com 
 */
@@ -328,22 +329,6 @@ ul.noBullet {
   font-weight: normal;
   font-style: normal; }
 
-/* Inconsolata regular */
-@font-face {
-  font-family: "Inconsolata";
-  src: url("../media/font/inconsolata-regular.eot");
-  src: url("../media/font/inconsolata-regular.eot?#iefix") format("embedded-opentype"), url("../media/font/inconsolata-regular.woff") format("woff"), url("../media/font/inconsolata-regular.ttf") format("truetype"), url("../media/font/inconsolata-regular.svg#inconsolataregular") format("svg");
-  font-weight: normal;
-  font-style: normal; }
-
-/* Inconsolata bold */
-@font-face {
-  font-family: "Inconsolata";
-  src: url("../media/font/inconsolata-bold.eot");
-  src: url("../media/font/inconsolata-bold.eot?#iefix") format("embedded-opentype"), url("../media/font/inconsolata-bold.woff") format("woff"), url("../media/font/inconsolata-bold.ttf") format("truetype"), url("../media/font/inconsolata-bold.svg#inconsolatabold") format("svg");
-  font-weight: bold;
-  font-style: normal; }
-
 /*
     ===============================
     basic layout and style settings
@@ -355,7 +340,7 @@ ul.noBullet {
   -o-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
-  font-family: "Inconsolata", monospace;
+  font-family: "PT Serif", monospace;
   font-weight: normal;
   margin: 0em;
   overflow-wrap: break-word;
