--- a/css/syntax.scss
+++ b/css/syntax.scss
@@ -12,7 +12,7 @@
 
 .highlight * {	
 	border: none;
-	font-family: $fontName;
+	font-family: $fontMonospaceName;
 	font-weight: normal;
 	font-size: 1em;
 	line-height: $lineHeight;
