new article shipped, syntax highlighting fixed

--- a/css/_tags.scss
+++ b/css/_tags.scss
@@ -162,7 +162,7 @@ img, object {
 	width: 80%;
 }
 
-object img { width: 100%; }
+//object img { width: 100%; }
 
 p {	margin-bottom: $marginDefault; }
 p:last-child { margin-bottom: 0em; }
