--- a/css/main.scss
+++ b/css/main.scss
@@ -27,6 +27,7 @@ body {
     color: $colTextDark;
     display: block;
     font-size: 1em;
+    overflow-x: hidden;
     overflow-y: scroll;
     position: relative;    
     width: 100%;    
@@ -63,12 +64,12 @@ article {
 
 aside {  
     display: table-cell;        
-    margin: 0em;
+    margin: 0em;    
     padding: $space;
     vertical-align: top;
     width: $widthAside;
 
-    img { max-width: 15em; }
+    img { max-width: 10em; }
 }
 
 footer {
@@ -157,7 +158,7 @@ section {
         border-top: 1px solid black;         
         display: block;
         padding: $space;
-        padding-top: $space * 2;
+        padding-top: $space;
         width: 100%;
     }
     
@@ -186,6 +187,10 @@ section {
 
             li { display: block; }
         }
+    }
+
+    object {
+        width: 100%;
     }
 
     label[for="menuTrigger"] {
