--- a/css/syntax.scss
+++ b/css/syntax.scss
@@ -1,30 +1,34 @@
 @import "_variables.scss";
 
-.highlight  { 
-	background-color: none; 
-	overflow-x: auto;	
+.highlight { 
+	background-color: none;
+	border: none;
+	font-family: $fontMonospaceName;
+	overflow-x: auto;
 	margin-top: $lineHeight;
-	margin-bottom: $lineHeight;
-	padding-left: 1em;
+	margin-bottom: $lineHeight;	
+	padding-left: 1em;	
+	width: auto;
 
-	code { background-color: $colBackground; }
+	code, pre { 
+		background-color: $colBackground; 		
+	}
 }
 
 .highlight * {	
+	background-color: none;
 	border: none;
-	font-family: $fontMonospaceName;
-	font-weight: normal;
-	font-size: 1em;
-	line-height: $lineHeight;
-	padding: 0;	
+	font-family: inherit;	
+	max-width: 10em;
+	padding: 0;
 }
 
 .highlight .lineno {	
 	background-color: none;
 	border-right: 0.25em solid $colLink;
 	color: $colTextDark;
-	display: block;
-	float: left;	
+	display: inline-block;
+	font-family: inherit;
 	margin-left: -0.5em;
 	padding-right: 0.5em;
 	padding-left: 0.5em;
