--- a/css/main.scss
+++ b/css/main.scss
@@ -26,7 +26,7 @@ body {
     background-color: $colBackground;
     color: $colTextDark;
     display: block;
-    font-size: 1em;
+    font-size: 16px;
     overflow-x: hidden;
     overflow-y: scroll;
     position: relative;    
@@ -56,8 +56,9 @@ body {
 
 article {
     background-color: $colForeground;
+    display: block;
     margin-bottom: $space;
-    padding: $space;    
+    padding: $space;
 
     &:last-child { margin-bottom: 0em; }
 }
