--- a/css/syntax.scss
+++ b/css/syntax.scss
@@ -1,34 +1,35 @@
 @import "_variables.scss";
 
-.highlight { 
+.highlight {
 	background-color: none;
 	border: none;
 	font-family: $fontMonospaceName;
+	font-size: 16px;
 	overflow-x: auto;
 	margin-top: $lineHeight;
-	margin-bottom: $lineHeight;	
-	padding-left: 1em;	
+	margin-bottom: $lineHeight;
+	padding-left: 1em;
 	width: auto;
 
-	code, pre { 
-		background-color: $colBackground; 		
+	code, pre {
+		background-color: $colBackground;
 	}
 }
-
-.highlight * {	
+.highlight * {
 	background-color: none;
 	border: none;
-	font-family: inherit;	
+	font-family: inherit;
+	font-size: inherit;
 	max-width: 10em;
 	padding: 0;
 }
-
-.highlight .lineno {	
+.highlight .lineno {
 	background-color: none;
 	border-right: 0.25em solid $colLink;
 	color: $colTextDark;
 	display: inline-block;
 	font-family: inherit;
+	font-size: inherit;
 	margin-left: -0.5em;
 	padding-right: 0.5em;
 	padding-left: 0.5em;
