--- a/css/_tags.scss
+++ b/css/_tags.scss
@@ -87,6 +87,7 @@ a.headline {
 
 a.navigation {
 	color: $colTextLight;	
+	vertical-align: baseline;
 }
 
 a.readMore {
@@ -162,7 +163,7 @@ img, object {
 	width: 80%;
 }
 
-//object img { width: 100%; }
+object img { width: 100%; }
 
 p {	margin-bottom: $marginDefault; }
 p:last-child { margin-bottom: 0em; }
