static pages are now in markdown

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -105,14 +105,10 @@
   of the screen a second layer with class 'contentArea' is neccessary.
   -->
   <footer>
-
     <div class="contentArea right">
-
-      <span class="bold">&copy; 2014 Michael Schaefer</span>
+      <span class="bold">&copy; 2014 Michael Schaefer</span>&nbsp;
       <a class="navigation" href="#wrapper"><span class="symbol"></span></a>
-
     </div>
-
   </footer>
 
   <!--
