--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -90,11 +90,11 @@
 
       <main>
         {{ content }}
-      </main>      
+      </main>
 
       <aside class="forPortraitMode">
-        {% include aside.html %}
-      </aside>           
+        {% include aside.html idPostFix="2" %}
+      </aside>      
 
     </div>
 
