--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -115,7 +115,7 @@
   MathJax support. The script tags are positioned at the end of <body> to make the website's content
   be loaded first and do the MathJax conversion afterwards.
   -->
-  <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+  <script type="text/javascript" src="//cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
   <script>
   MathJax.Hub.Config({
     tex2jax: {
