--- a/_includes/shortPost.html
+++ b/_includes/shortPost.html
@@ -5,7 +5,7 @@
 {% if post.tags.size == 0 %}
     {% assign tagList = postData['strings'].noTags %}
 {% else %}
-    {% capture tagList %}{% for tag in post.tags %}, <a href="{{ site.data.i18n[language]['tag'].url }}/{{ tag | downcase | cgi_escape }}/">{{ tag | downcase }}</a>{% endfor %}{% endcapture %}
+    {% capture tagList %}{% for tag in post.tags %}, <a href="{{ site.data.i18n[language]['tag'].url }}/{{ tag | downcase | cgi_escape | cgi_escape }}/">{{ tag | downcase }}</a>{% endfor %}{% endcapture %}
 {% endif %}
 
 
