--- a/_includes/tagCloud.html
+++ b/_includes/tagCloud.html
@@ -32,6 +32,6 @@
 	{% for tag in tagList %}
 		{% assign tagPair = tag | split: ';' %}
 		{% capture title %}{{ tagPair[2] }}&nbsp;{% if tagPair[2] == "1" %}{{ tagCloudData['strings'].article }}{% else %}{{ tagCloudData['strings'].articles }}{% endif %}{% endcapture %}
-		{% if forloop.first %}{% else %}-->{% endif %}<a class="box" href="{{ tagCloudData.url }}/{{ tagPair[0] | cgi_escape }}/">{{ tagPair[0] }}</a>{% if forloop.last %}{% else %}<!--{% endif %}
+		{% if forloop.first %}{% else %}-->{% endif %}<a class="box" href="{{ tagCloudData.url }}/{{ tagPair[0] | cgi_escape | cgi_escape }}/">{{ tagPair[0] }}</a>{% if forloop.last %}{% else %}<!--{% endif %}
 	{% endfor %}
 {% endif %}
