static search via jekyll_lunr_js_search plugin

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -63,7 +63,8 @@
             <li><a class="navigation" href="{{ entry.url }}">{{ entry.text }}</a></li>
             {% endfor %}        
             <li><a class="navigation" href="{{ site.data.i18n[language]['biography'].url }}">{{ site.data.i18n[language]['biography'].text }}</a></li>
-            <li><a class="navigation" href="{{ site.data.i18n[language]['imprint'].url }}">{{ site.data.i18n[language]['imprint'].text }}</a></li>
+            <li><a class="navigation" href="{{ site.data.i18n[language]['search'].url }}">{{ site.data.i18n[language]['search'].text }}</a></li>
+	    <li><a class="navigation" href="{{ site.data.i18n[language]['imprint'].url }}">{{ site.data.i18n[language]['imprint'].text }}</a></li>
           </ul>
 
         </div>
