new article: pattern formation

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -107,7 +107,7 @@
   -->
   <footer>
     <div class="contentArea right">
-      <span class="bold">&copy; 2014 Michael Schaefer</span>&nbsp;
+      <span class="bold">&copy; 2014-2015 Michael Schaefer</span>&nbsp;
       <a class="navigation" href="#wrapper"><span class="symbol"></span></a>
     </div>
   </footer>
