--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -11,7 +11,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />  
 
-  <link rel="shortcut icon" href="/files/favicon.ico" />
+  <link rel="shortcut icon" href="/theme/images/favicon.ico" />
 
   <!-- Custom CSS -->
   <link rel="stylesheet" href="/theme/css/main.css" />
