--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -128,6 +128,9 @@
       inlineMath: [['$', '$'], ['\\(', '\\)']],
       processEscapes: true,
       skipTags: ['script', 'noscript', 'style', 'textarea', 'pre']
+    },
+    TeX: {
+      equationNumbers: {autoNumber: "AMS"}
     }
   });
   MathJax.Hub.Queue(function() {
